Quorum3/Library/Tests/TypeChecker/Pass/ImpAssignBooleanBoolObjWrapped.quorum
class Main
    action Main
        Boolean bool
        bool:SetValue(true)
        boolean b = bool
    end
end