Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextObjBoolObjWrapped.quorum
class main
    action Main
        Boolean bool
        bool:setValue(true)
        Text t = bool
    end
end